--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
       "changeOrigin": true,
       "target": "https://secure.gooddata.com/"
     }
+  },
+  "devDependencies": {
+    "eslint": "^4.8.0",
+    "eslint-plugin-react": "^7.4.0"
   }
 }
