--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "react-scripts": "1.0.14"
   },
   "scripts": {
-    "run": "HTTPS=true yarn start",
-    "start": "react-scripts start",
+    "start": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
