--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@gooddata/data-layer": "^3.3.0",
     "@gooddata/react-components": "^2.5.2",
+    "prop-types": "^15.6.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-scripts": "1.0.14"
